--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "ts-node src/server.ts",
-    "start:dev": "nodemon -V -w . --ext \".ts\" --ignore \".spec.ts\" --exec \"npm run start",
+    "start:dev": "nodemon -V -w . --ext \".ts\" --ignore \".spec.ts\" --exec \"npm run start\"",
     "build": "tsc",
     "build:watch": "tsc -w",
     "clean": "rm -rf build"
@@ -19,7 +19,11 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
+    "@types/passport": "^0.4.3",
+    "@types/passport-facebook": "^2.1.7",
     "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "pg": "^7.4.1",
     "sequelize": "^4.33.4"
   },
